--- a/gptspeaks/package.json
+++ b/gptspeaks/package.json
@@ -9,7 +9,6 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -43,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.6"
+    "@types/bootstrap": "^5.2.6",
+    "@types/react-dom": "^18.0.10"
   }
 }
