--- a/gptspeaks/package.json
+++ b/gptspeaks/package.json
@@ -15,6 +15,7 @@
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-media-recorder": "^1.6.6",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
